--- a/.github/workflows/infrastructure-ci.yaml
+++ b/.github/workflows/infrastructure-ci.yaml
@@ -25,3 +25,5 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: list resource group list
+        run: az group list
