--- a/.github/workflows/infrastructure-ci.yaml
+++ b/.github/workflows/infrastructure-ci.yaml
@@ -22,5 +22,22 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: list resource group list
-        run: az login
+
+      - name: 'Terraform Format'
+        uses: hashicorp/terraform-github-actions@master
+        with:
+         tf_actions_version: 2.0.3
+         tf_actions_subcommand: 'fmt'
+         tf_actions_working_dir: "./terraform"
+      - name: 'Terraform Init'
+        uses: hashicorp/terraform-github-actions@master
+        with:
+            tf_actions_version: 2.0.3
+            tf_actions_subcommand: 'init'
+            tf_actions_working_dir: "./terraform"
+      - name: 'Terraform Plan'
+        uses: hashicorp/terraform-github-actions@master
+        with:
+            tf_actions_version: 2.0.3
+            tf_actions_subcommand: 'plan'
+            tf_actions_working_dir: "./terraform"
