--- a/.github/workflows/infrastructure-ci.yaml
+++ b/.github/workflows/infrastructure-ci.yaml
@@ -20,30 +20,42 @@ jobs:
       run:
         shell: bash
         working-directory: terraform
+    steps:
+    - uses: actions/checkout@v3
+    - uses: hashicorp/setup-terraform@v2
+
+    - name: Terraform fmt
+      id: fmt
+      run: terraform fmt -check
+      continue-on-error: true
+
+    - name: Terraform Init
+      id: init
+      run: terraform init
     
 
 
    
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+    # steps:
+    #   - name: Checkout
+    #     uses: actions/checkout@v2
 
-      - name: 'Terraform Format'
-        uses: hashicorp/terraform-github-actions@master
-        with:
-         tf_actions_version: 2.0.3
-         tf_actions_subcommand: 'fmt'
-         tf_actions_working_dir: "./terraform"
-      - name: 'Terraform Init'
-        uses: hashicorp/terraform-github-actions@master
-        with:
-            tf_actions_version: 2.0.3
-            tf_actions_subcommand: 'init'
-            tf_actions_working_dir: "./terraform"
-      - name: 'Terraform Plan'
-        uses: hashicorp/terraform-github-actions@master
-        with:
-            tf_actions_version: 2.0.3
-            tf_actions_subcommand: 'plan'
-            tf_actions_working_dir: "./terraform"
+    #   - name: 'Terraform Format'
+    #     uses: hashicorp/terraform-github-actions@master
+    #     with:
+    #      tf_actions_version: 2.0.3
+    #      tf_actions_subcommand: 'fmt'
+    #      tf_actions_working_dir: "./terraform"
+    #   - name: 'Terraform Init'
+    #     uses: hashicorp/terraform-github-actions@master
+    #     with:
+    #         tf_actions_version: 2.0.3
+    #         tf_actions_subcommand: 'init'
+    #         tf_actions_working_dir: "./terraform"
+    #   - name: 'Terraform Plan'
+    #     uses: hashicorp/terraform-github-actions@master
+    #     with:
+    #         tf_actions_version: 2.0.3
+    #         tf_actions_subcommand: 'plan'
+    #         tf_actions_working_dir: "./terraform"
