--- a/.github/workflows/infrastructure-ci.yaml
+++ b/.github/workflows/infrastructure-ci.yaml
@@ -32,6 +32,14 @@ jobs:
     - name: Terraform Init
       id: init
       run: terraform init
+
+    - name: Terraform Validate
+      id: validate
+      run: terraform validate -no-color
+
+    - name: Terraform Plan
+      id: plan
+      run: terraform plan -no-color
     
 
 
