--- a/.github/workflows/infrastructure-ci.yaml
+++ b/.github/workflows/infrastructure-ci.yaml
@@ -1,4 +1,4 @@
-name: 'Terraform'
+name: Terraform Plan
 
 on:
   push:
@@ -7,57 +7,100 @@ on:
 
 jobs:
   terraform:
-    name: 'Terraform'
-    env:
-      ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
-      ARM_CLIENT_SECRET: ${{ secrets.AZURE_AD_CLIENT_SECRET }}
-      ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-      ARM_TENANT_ID:   ${{ secrets.AZURE_AD_TENANT_ID }}
     runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v2
+
+      - name: Azure Login
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Configure Terraform CLI
+        uses: hashicorp/setup-terraform@v1
+        with:
+          terraform_version: 1.1.0
+
+      - name: Terraform Init
+        run: terraform init
+
+      - name: Terraform Plan
+        run: terraform plan -out=tfplan
+        env:
+          ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
+          ARM_CLIENT_SECRET: ${{ secrets.AZURE_AD_CLIENT_SECRET }}
+          ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          ARM_TENANT_ID: ${{ secrets.AZURE_AD_TENANT_ID }}
+
+      - name: Save Plan
+        uses: actions/upload-artifact@v2
+        with:
+          name: tfplan
+          path: ./tfplan
+
+
+
+# name: 'Terraform'
+
+# on:
+#   push:
+#     branches:
+#       - main
+
+# jobs:
+#   terraform:
+#     name: 'Terraform'
+#     env:
+#       ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
+#       ARM_CLIENT_SECRET: ${{ secrets.AZURE_AD_CLIENT_SECRET }}
+#       ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+#       ARM_TENANT_ID:   ${{ secrets.AZURE_AD_TENANT_ID }}
+#     runs-on: ubuntu-latest
     
 
 
-    defaults:
-      run:
-        shell: bash
-        working-directory: terraform
+#     defaults:
+#       run:
+#         shell: bash
+#         working-directory: terraform
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@v2
 
-      - name: 'Terraform Format'
-        uses: hashicorp/terraform-github-actions@master
-        with:
-         tf_actions_version: 0.14.8
-         tf_actions_subcommand: 'fmt'
-         tf_actions_working_dir: "./terraform"
-      - name: 'Terraform Init'
-        uses: hashicorp/terraform-github-actions@master
-        with:
-            tf_actions_version: 0.14.8
-            tf_actions_subcommand: 'init'
-            tf_actions_working_dir: "./terraform"
-      - name: 'Terraform Plan'
-        uses: hashicorp/terraform-github-actions@master
-        with:
-            tf_actions_version: 0.14.8
-            tf_actions_subcommand: 'plan'
-            tf_actions_working_dir: "./terraform"
-      - name: 'Terraform Apply'
-        if: github.ref == 'refs/heads/main'
-        uses: hashicorp/terraform-github-actions@master
-        with:
-          tf_actions_version: 0.14.8
-          tf_actions_subcommand: 'apply'
-          tf_actions_working_dir: "./terraform"
-      - name: 'Terraform Destroy'
-        if: github.ref == 'refs/heads/main'
-        uses: hashicorp/terraform-github-actions@master
-        with:
-            tf_actions_version: 0.14.8
-            tf_actions_subcommand: 'destroy'
-            tf_actions_working_dir: "./terraform"
+#       - name: 'Terraform Format'
+#         uses: hashicorp/terraform-github-actions@master
+#         with:
+#          tf_actions_version: 0.14.8
+#          tf_actions_subcommand: 'fmt'
+#          tf_actions_working_dir: "./terraform"
+#       - name: 'Terraform Init'
+#         uses: hashicorp/terraform-github-actions@master
+#         with:
+#             tf_actions_version: 0.14.8
+#             tf_actions_subcommand: 'init'
+#             tf_actions_working_dir: "./terraform"
+#       - name: 'Terraform Plan'
+#         uses: hashicorp/terraform-github-actions@master
+#         with:
+#             tf_actions_version: 0.14.8
+#             tf_actions_subcommand: 'plan'
+#             tf_actions_working_dir: "./terraform"
+#       - name: 'Terraform Apply'
+#         if: github.ref == 'refs/heads/main'
+#         uses: hashicorp/terraform-github-actions@master
+#         with:
+#           tf_actions_version: 0.14.8
+#           tf_actions_subcommand: 'apply'
+#           tf_actions_working_dir: "./terraform"
+#       - name: 'Terraform Destroy'
+#         if: github.ref == 'refs/heads/main'
+#         uses: hashicorp/terraform-github-actions@master
+#         with:
+#             tf_actions_version: 0.14.8
+#             tf_actions_subcommand: 'destroy'
+#             tf_actions_working_dir: "./terraform"
     
 
 
